--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -9,7 +9,7 @@ on:
         default: 'https://transfer.sh/(RECOMMENDED)'
 
 env:
-  RECOVERY_URL: https://oshi.at/Rpjg
+  RECOVERY_URL: ${{github.event.inputs.RECOVERY_URL}}
 
 jobs:
   build:
